--- a/package.json
+++ b/package.json
@@ -3,9 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "run-source": "node index.js",
+    "build": "ncc build process.js -o ."
+  },
   "dependencies": {
+    "@actions/core": "^1.2.7",
     "@ramumb/strip-tags": "^0.1.3",
+    "@vercel/ncc": "^0.28.5",
     "github-slugger": "^1.3.0",
+    "meilisearch": "^0.18.1",
     "simple-markdown": "^0.7.3"
+  },
+  "devDependencies": {
+    "covector": "^0.3.0"
   }
 }
